--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
     "format": "prettier --write src/",
-    "check:format": "prettier --check src/"
+    "check:format": "prettier --check src/",
+    "prepare": "husky install"
   },
   "dependencies": {
     "core-js": "^3.8.3",
@@ -29,6 +30,7 @@
     "babel-jest": "^27.0.6",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "husky": "^8.0.3",
     "jest": "^27.0.5",
     "prettier": "2.8.8",
     "sass": "^1.32.7",
