--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
     "format": "prettier --write src/",
+    "check": "npm run check:format && npm run check:typing",
     "check:format": "prettier --check src/",
+    "check:typing": "vue-tsc --noEmit",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -36,7 +38,8 @@
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
     "ts-jest": "^27.0.4",
-    "typescript": "~4.5.5"
+    "typescript": "~4.5.5",
+    "vue-tsc": "^1.6.4"
   },
   "prettier": {
     "singleQuote": true,
