--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "vue": "~3.2.13"
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
